--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bank_mega
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=3.3.4 <4.0.0'
 
 dependencies:
@@ -23,6 +23,10 @@ dependencies:
   photo_view: ^0.15.0
   multi_image_picker: ^4.8.1
   in_app_update: ^4.2.1
+  file_picker: ^5.2.5
+  pdf: ^3.11.1
+  pdf_render: ^1.4.12
+  path_provider: ^2.0.12
   device_info_plus: ^8.0.0
   app_settings: ^5.1.1
   timezone: ^0.9.4
@@ -84,9 +88,9 @@ dependencies:
   slide_countdown: ^1.6.1
   flutter_polyline_points: ^2.0.0
   pinput: ^4.0.0
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: 4.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
 flutter:
