--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   in_app_update: ^4.2.1
   file_picker: ^5.2.5
   pdf: ^3.11.1
+  http_parser: ^4.0.0
   pdf_render: ^1.4.12
   path_provider: ^2.0.12
   device_info_plus: ^8.0.0
@@ -42,6 +43,7 @@ dependencies:
   easy_stepper: ^0.8.3
   flutter_svg: ^2.0.9
   lottie: ^2.7.0
+
   curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
@@ -99,6 +101,7 @@ flutter:
     - assets/gambar/bg_quiz.png
     - assets/gambar/bgdepan.png
     - assets/gambar/celebration.png
+    - assets/gambar/default.jpg
     - assets/gambar/login_failed.png
     - assets/gambar/login_top_shape.png
     - assets/gambar/mega.jpg
@@ -109,7 +112,6 @@ flutter:
     - assets/gambar/town_background_cutout.png
     - assets/logo/agencyroom.png
     - assets/logo/mega_insurance.png
-    - assets/lottie/anm_travel.json
     - assets/lottie/anm_arrow.json
     - assets/lottie/anm_assess.json
     - assets/lottie/anm_baloon.json
@@ -125,8 +127,8 @@ flutter:
     - assets/lottie/anm_learning.json
     - assets/lottie/anm_list.json
     - assets/lottie/anm_loading.json
-    - assets/lottie/anm_logobg.json
     - assets/lottie/anm_loading_circle.json
+    - assets/lottie/anm_logobg.json
     - assets/lottie/anm_otp.json
     - assets/lottie/anm_plane.json
     - assets/lottie/anm_reminder.json
@@ -140,4 +142,5 @@ flutter:
     - assets/lottie/anm_todo.json
     - assets/lottie/anm_town.json
     - assets/lottie/anm_towns.json
+    - assets/lottie/anm_travel.json
 
