--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   easy_stepper: ^0.8.3
   flutter_svg: ^2.0.9
   lottie: ^2.7.0
-
+  open_file: ^3.5.3
   curved_navigation_bar: ^1.0.3
   flutter:
     sdk: flutter
