--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+ platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -39,6 +39,11 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
+       if target.name == "geolocator_apple"
+            target.build_configurations.each do |config|
+                   config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'BYPASS_PERMISSION_LOCATION_ALWAYS=1']
     flutter_additional_ios_build_settings(target)
+    end
   end
+end
 end
